# ros_img2pose

./: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
models/: extract_models.sh
scripts/: img2pose_node.py
src/ros_img2pose/: camera.py  img2pose.py  losses.py  model_loader.py  models.py
src/ros_img2pose/utils/: image_operations.py
